Prevent maxLength to become smaller than indent.length

Since indent.length is substracted from maxLength, we have to
make sure it is > indent.length+1, otherwise maxLength will be
negative and the while loop will never terminated :/

BUG: 261075

svn path=/trunk/KDE/kdepimlibs/; revision=1210462